css fixed to stop the overflowing

--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -16,14 +16,14 @@
   padding: 2rem;
 }
 
-/* .about_text_box {
+.about_text_box {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   background-color: rgba(220, 120, 131, 0.09);
   color: #4d4d4d;
   padding: 0 2rem;
-} */
+}
 
 /* .about_text_box p {
   font-weight: 400;
