--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -3,7 +3,7 @@
   width: 100;
   display: flex;
   justify-content: center;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .contact_left_container,
