--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -14,6 +14,7 @@
   background-position: top;
   height: auto;
   object-fit: cover;
+  overflow-x: hidden;
 }
 
 .skills_main_box {
